Fix URLs pushing out layout on mobile

--- a/app/assets/stylesheets/organizations.css.scss
+++ b/app/assets/stylesheets/organizations.css.scss
@@ -15,7 +15,24 @@ div.organization {
   margin-top: 10px;
   min-height: 150px;
 }
-  
+.organization-content {
+  .url {
+    position: relative;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+
+    i {
+      position: absolute;
+      left: 2px;
+      top: 3px;
+    }
+
+    a {
+      padding-left: 25px;
+    }
+  }
+}
+
 @media screen and (min-width: 768px) {
   div.organization-content {
     margin-right: 220px;
